--- a/static/feed.html
+++ b/static/feed.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-
+        <div id="content"></div>
         <script src="/static/third-party/socket.io.min.js"></script>
         <script src="/static/feed.js"></script>
 
